Fix the suppressed hover states on mobile
See https://www.woltlab.com/community/thread/300930-button-farbe-in-der-editor-toolbar-fehlt-im-hellen-farbschema/

--- a/wcfsetup/install/files/style/ui/ckeditor.scss
+++ b/wcfsetup/install/files/style/ui/ckeditor.scss
@@ -197,9 +197,9 @@
 }
 
 @media (pointer: coarse) {
-	.ck-button:not(.ck-disabled, .ck-on) {
-		background: var(--ck-color-button-default-background) !important;
-		color: var(--ck-color-text) !important;
+	.ck.ck-toolbar__items .ck.ck-button:not(.ck-disabled, .ck-on):hover {
+		background: var(--ck-color-button-default-background);
+		color: var(--ck-color-text);
 	}
 }
 
